# BakersLanguage

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  _auto_include.qtz  blc.sh  scannerTestFile.txt
doc/: error_handling_call_chaining.tex  grammar  symbols
examples/: a.bl  b.bl  c.bl  d.bl  e.bl  f.bl  helloWorld.bl  min.bl
src/: CompoundStatement.h  Declaration.h  Error.cpp  Error.h  FunctionDeclaration.h  Location.cpp  Location.h  ParameterList.h  Program.h  Scanner.cpp  Scanner.h  Symbol.h  Token.h  Type.h  TypeDefinition.h  globalDefines.h  main.cpp
src/ast/: Alias.cpp  Alias.h  ClassDeclaration.cpp  ClassDeclaration.h  CompoundStatement.cpp  CompoundStatement.h  Constant.cpp  Constant.h  Declaration.cpp  Declaration.h  Expression.cpp  Expression.h  ExpressionStatement.cpp  ExpressionStatement.h  FunctionDeclaration.cpp  FunctionDeclaration.h  FunctionType.cpp  FunctionType.h  FunctionTypeExpression.cpp  FunctionTypeExpression.h  Initializer.cpp  Initializer.h  IntegerLiteral.cpp  IntegerLiteral.h  LiteralExpression.cpp  LiteralExpression.h  Module.cpp  Module.h  Namespace.cpp  Namespace.h  ParameterList.cpp  ParameterList.h  Pointer.cpp  Pointer.h  Primitive.cpp  Primitive.h  Program.cpp  Program.h  Scope.cpp  Scope.h  (+18 more)
src/codeGen/: BasicBlock.cpp  BasicBlock.h  CodeGen.cpp  CodeGen.h  Function.cpp  Function.h  Instruction.cpp  Instruction.h  Value.h
src/parse/: CompoundStatement.cpp  CompoundStatement.h  FunctionDeclaration.cpp  FunctionDeclaration.h  ParameterList.cpp  Program.cpp  Program.h  SyntaxNode.h  Type.cpp  Type.h  TypeDefinition.h
src/scan/: Scanner.cpp  Scanner.h  Token.cpp  Token.h
stdlib/: AUTO_INCLUDE.bl  Error.bl  String.bl  io.bl  iterator.bl
unittests/: CMakeLists.txt  CMakeLists.txt.in  DeclarationTest.h  ErrorTest.h  LocationTest.h  ScannerTest.h  SyntaxNodeTest.h  TestTemplate.h  TokenTest.h  blcTest.cpp  blcTests.cpp
